dev: fixing a font sizing on mobile with new style guide

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -51,7 +51,7 @@ $box-shadow: 0 2px 10px rgba($text-colour, 0.5);
 // Styles for the pattern library - change at your peril
 // Please put any code that is purely for the guide and not for the kit in here
 
-// Inter UI
+// Inter UI and style overrides
 
 .nta-font {
   font-family: "nta", Arial, sans-serif!important;
@@ -81,6 +81,22 @@ main, table td, .navbar .navbar__list-items li a {
   margin-bottom: 1.5em;
 }
 
+@media (max-width: 640px) {
+
+  body, main, .heading-section, .heading-xlarge, .heading-large, .heading-medium, .heading-small, .lede, .navbar, table td, .navbar .navbar__list-items li a {
+    line-height: 1.35!important;
+  }
+
+  main, table td, .navbar .navbar__list-items li a {
+    font-size: 15px;
+  }
+
+  .lede {
+    font-size: 17.5px;
+    margin-bottom: 1.5em;
+  }
+}
+
 // Helpers
 .mt-15 {
   margin-top: 15px;
@@ -102,6 +118,12 @@ a {
   font-weight: 700;
   margin-top: 1em;
   margin-bottom: 0.55556em;
+}
+
+@media (max-width: 640px) {
+  .heading-section {
+    font-size: 32px;
+  }
 }
 
 // Contact us
